--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           <article class="project">
             <h3>Amino Acid k-mer Feature Extraction for Quantitative Antimicrobial Resistance (AMR) Prediction</h3>
             <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
-            <img src="images/AMR.png" alt="Visualization of amino-acid k-mer features for AMR prediction" style="max-width:100%; height:auto; margin:8px 0;">
             <p class="muted">The aim of this project was to design and test machine learning approaches that leverage bacterial genome sequences in two ways: first, to estimate the minimum antibiotic dosage needed to combat an infection; and second, to pinpoint mutations or genes that contribute to resistance. I introduced a new feature extraction method, counting Amino-Acid k-mers, enables machine learning models to recognize recurring patterns in amino acid sequences within bacterial genes. I compared the proposed method to the existing methods, such as counting nucleotide (NT) k-mers, gene searching, and Single-nucleotide polymorphism (SNP) calling. The proposed approach not only matches or surpasses the accuracy of current techniques for predicting dosage but also offers researchers deeper insight into how resistance arises at the molecular level.</p>
+            <img src="images/AMR.png" alt="Visualization of implemented methods for analyzing bacterial genomes" style="max-width:100%; height:auto; margin:8px 0;">
           </article>
 
           <article class="project">
@@ -115,15 +115,15 @@
           <article class="project">
             <h3>Two-stage fine-tuning for learning class-imbalanced data</h3>
             <p class="muted">In practical classification scenarios, it's common to encounter an imbalanced or long tailed distribution of classes. This situation arises when certain classes within the dataset, known as minority classes, are represented by a relatively small number of samples, while others, referred to as majority classes, are characterized by a significantly larger number of samples. This non-uniform distribution of samples among classes presents a challenge to a wide array of machine learning algorithms. This issue is further exacerbated if the selected performance metric values all classes equally, irrespective of their frequency in the dataset, for reasons such as fairness and inclusivity or because of an intrinsic interest in the minority class.</p>
-            <img src="images/two-stage.jpg" alt="Two-stage fine-tuning" style="max-width:100%; height:auto; margin:8px 0;">
             <p class="muted">To cope with these challenges, a simple modification of standard fine-tuning is employed: Two-stage fine-tuning. In Stage 1, the final layer of the pretrained model is pre-finetuned. The pre-finetuning can be done either by training the last layer with class-balanced augmented data, generated using ChatGPT, or with a class-balanced reweighting method used with the original data. In Stage 2, the standard fine-tuning is performed. This modification has several benefits: (1) it leverages pretrained representations by only finetuning a small portion of the model parameters while keeping the rest untouched; (2) it allows the model to learn an initial representation of the specific task; and importantly (3) it protects the learning of tail classes from being at a disadvantage during the model updating. The experimental results show that the proposed two-stage fine-tuning outperforms vanilla fine-tuning and state-of-the-art methods on the above datasets.</p>
+            <img src="images/two-stage.jpg" alt="Two-stage fine-tuning" style="max-width:100%; height:auto; margin:8px 0;">
           </article>
 
           <article class="project">
             <h3>Mathematical analysis of error control performance of IS-LDPC codes</h3>
             <p class="muted">Peak-to-Average Power Ratio (PAPR) is a major shortcoming of Orthogonal Frequency Division Multiplexing (OFDM) systems. One promising solution to this issue is the use of Invertible-Subset Low-Density Parity-Check (IS-LDPC) codes. Although IS-LDPC codes are particularly effective at controlling PAPR with low search complexity, their error-control performance degrades as the number of invertible subsets increases.</p>
-            <img src="images/IS-LDPC-png" alt="Two-stage fine-tuning" style="max-width:100%; height:auto; margin:8px 0;">
             <p class="muted">To investigate the reasons for this performance degradation, I conducted a mathematical analysis of the code construction and proved four theorems that determine the probability of key events in construction of such codes, while also establishing bounds on the decisions that influence their performance. Based on these theorems, I proposed a heuristic search method designed to enhance the error-control performance of IS-LDPC codes, while maintaining their favorable PAPR control characteristics and low search complexity.</p>
+            <img src="images/IS-LDPC-png" alt="Mathematical analysis of construction of IS-LDPC codes" style="max-width:100%; height:auto; margin:8px 0;">
           </article>
         </div>
       </section>
@@ -150,6 +150,7 @@
   </script>
 </body>
 </html>
+
 
 
 
