--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <body>
   <div class="wrap">
     <aside class="rail">
-      <h1 class="name">Taha ValizadehAslani</h1>
-      <p class="role">Machine Learning Engineer</p>
+      <h1 class="name">Taha ValizadehAslani, Ph.D.</h1>
+      <p class="role">Machine Learning Engineer | Ph.D. in Engineering</p>
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
@@ -177,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
