--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal</p>
         <div class="meta" style="margin-top:8px">
           <span>Philadelphia, USA</span>
-          <span>•</span>
-          <span><a href="mailto:taha.valizadeh@gmail.com">email</a></span>
+          <br>
+          <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
           <span><a href="https://scholar.google.com/citations?user=WxaHx0sAAAAJ&hl=en">Google Scholar</a></span>
           <span>•</span
@@ -171,6 +171,7 @@
   </script>
 </body>
 </html>
+
 
 
 
