--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
       <section id="about" class="intro">
         <h1>Theory in Service of Practice</h1>
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal</p>
-        <div class="meta" style="margin-top:8px">
-          <span>Philadelphia, USA</span>
-          <br>
+        Philadelphia, USA
+        <div class="meta" style="margin-top:8px">  
           <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
           <span><a href="https://scholar.google.com/citations?user=WxaHx0sAAAAJ&hl=en">Google Scholar</a></span>
