--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <article class="project">
             <h3>
               <a href="https://academic.oup.com/bib/article/24/4/bbad226/7197744" target="_blank" rel="noreferrer noopener">
-                PharmBERT
+                PharmBERT: An LLM for pharmaceutical texts
               </a>
             </h3>
             <p class="muted">Pharmaceutical text found on drug labels possesses distinct features that differentiate it significantly from the regular text. This specificity stems from the specialized language, terminology, and regulatory requirements that shape the drug label domain. As a consequence, a generic large language model (LLM), often known as a vanilla model might not exhibit optimal effectiveness when applied to the drug label text. This is primarily because such generic models lack the domain-specific knowledge required to accurately interpret and process the nuances and specialized idiosyncrasies inherent in pharmaceutical texts.</p>
@@ -170,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
