--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
 
 
 
-      <section id="Publications">
-        <h2>Publications</h2>
+      <section id="research">
+        <h2>Research</h2>
       
+        <h3>Publications</h3>
         <ul class="pub-list">
           <li>
             <a href="https://doi.org/10.1016/j.neucom.2024.127801">
@@ -241,6 +242,7 @@
           </li>
         </ul>
       
+        <h3>Academic Peer Review</h3>
         <ul class="pub-list">
           <li>Reviewed for <em>PLOS Digital Health</em>.</li>
         </ul>
@@ -265,41 +267,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
