--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <section id="Publications">
         <h2>Publications</h2>
       
-        <h3>Papers</h3>
+        <h3>Journal and Conference Papers</h3>
         <ul class="pub-list">
           <li>
             <a href="https://doi.org/10.1016/j.neucom.2024.127801">
@@ -267,4 +267,5 @@
   </script>
 </body>
 </html>
+
 
