--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </section>
       <section id="work">
         <h2>Selected Work</h2>
-        <div class="projects">
+<!--         <div class="projects"> -->
 
           <article class="project">
             <h3>
@@ -152,7 +152,7 @@
             <p class="muted">To investigate the reasons for this performance degradation, I conducted a mathematical analysis of the code construction and proved four theorems that determine the probability of key events in construction of such codes, while also establishing bounds on the decisions that influence their performance. Based on these theorems, I proposed a heuristic search method designed to enhance the error-control performance of IS-LDPC codes, while maintaining their favorable PAPR control characteristics and low search complexity.</p>
             <img src="images/IS-LDPC.png" alt="Mathematical analysis of construction of IS-LDPC codes" style="max-width:60%; height:auto; margin:8px 0;">
           </article>
-        </div>
+<!--         </div> -->
       </section>
 
 
@@ -267,5 +267,6 @@
   </script>
 </body>
 </html>
+
 
 
