--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
+        <a href="#Education">Education</a>
+        <a href="#Publications">Publications</a>
         <a href="#contact">Contact</a>
         <a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a>
       </nav>
@@ -292,6 +294,7 @@
   </script>
 </body>
 </html>
+
 
 
 
