--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
   <div class="wrap">
     <aside class="rail">
       <h1 class="name">Taha ValizadehAslani</h1>
-      <p class="role">Machine Learning Engineer | Ph.D. in Engineering</p>
-      <p class="role">Philadelphia, USA</p>
+      <p class="role">Machine Learning Engineer <br> Philadelphia, USA</p>
+<!--       <p class="role">Philadelphia, USA</p> -->
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
@@ -296,4 +296,5 @@
   </script>
 </body>
 </html>
+
 
