--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
 
 
 
+      
+      <section id="Experience">
+        <h2>Experience</h2>
+        <ul class="edu-list">
+          <li>
+            <strong>Comcast</strong> — Software Engineer<br>
+            <span class="muted">Philadelphia, PA • Sept 2023 – Present</span>
+          </li>
+        </ul>
+      </section>      
+
+      
+
       <section id="Education">
         <h2>Education</h2>
         <ul class="edu-list">
@@ -296,5 +309,6 @@
   </script>
 </body>
 </html>
+
 
 
