--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a href="#Experience">Experience</a>
         <a href="#Education">Education</a>
         <a href="#Publications">Publications</a>
-        <a href="#Book Recommendations">books</a>
+        <a href="#books">Book Recommendations</a>
         <a href="#contact">Contact</a>
         <a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a>
       </nav>
@@ -326,6 +326,7 @@
   </script>
 </body>
 </html>
+
 
 
 
