--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
       <section id="books">
         <h2>Book Recommendations</h2>
-        These are books that I ahve read and I recommend. The books are classified by topic
+        Here are books I’ve read and recommend, loosely classified by topic.
 
         <h3>Psychology and Social Sciences</h3>
           <ul class="book-list">  
@@ -364,6 +364,7 @@
   </script>
 </body>
 </html>
+
 
 
 
