--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
             <li><strong>The Story of Philosophy</strong> by Will Durant</li>
             <li><strong>Sophie's World</strong> by Jostein Gaarder</li>
             <li><strong>Meditations</strong> by Marcus Aurelius</li>
+            <li><strong>The Natural History of Religion</strong> by David Hume</li>
          </ul>        
 
         <h3>Ecconomics and Politics</h3>
@@ -350,14 +351,19 @@
             <li><strong>The Metamorphosis</strong> by Franz Kafka</li>
             <li><strong>The Plague</strong> by Albert Camus</li>
             <li><strong>The Fall</strong> by Albert Camus</li>
+            <li><strong>The Stranger</strong> by Albert Camus</li>
             <li><strong>The First Man</strong> by Albert Camus</li>
             <li><strong>Flypaper</strong> by Robert Musil/li>
             <li><strong>Blindness</strong> by José Saramago</li>
             <li><strong>The Sound and the Fury</strong> by William Faulkner</li>
+            <li><strong>As I Lay Dying</strong> by William Faulkner</li>
             <li><strong>A Madman for a Hundred Liras</strong> by Aziz Nesin</li
             <li><strong>Germinal</strong> by Émile Zola</li 
             <li><strong>Animal Farm</strong> by George Orwell</li                                     
             <li><strong>The Blind Owl</strong> by Sadegh Hedayat</li>
+            <li><strong>Three Drops of Blood</strong> by Sadegh Hedayat</li>
+            <li><strong>The Little Prince</strong> by Antoine de Saint-Exupéryt</li>
+            <li><strong>Anna Karenina</strong> by Leo Tolstoy</li>
          </ul>  
         
       </section>
@@ -381,6 +387,7 @@
   </script>
 </body>
 </html>
+
 
 
 
